[package]
name = "afreeca-downloader"
version = "0.1.0"
authors = ["oni"]
edition = "2018"

[dependencies]
url = "1.7.2"
serde_urlencoded = "0.5.5"
serde = { version = "1.0.92", features = ["derive"] }
error-chain = "0.12.1"
regex = "1.1.6"
select = "0.4.2"
reqwest = "0.9.17"
xml-rs = "0.8.0"
encoding_rs = "0.8.17"
m3u8-rs = "1.0.5"
clap = "2.33.0"
pbr = "1.0.1"
tempdir = "0.3.7"
